--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     },
     "autoload": {
         "psr-4": {
-            "OsHelper\\": "src"
+            "JoliCode\\": "src"
         }
     }
 }
